ingress/welcome-app-service-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: welcome-app
  name: welcome-app
spec:
  ports:
    - name: welcome-app
      port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    app: welcome-app
  type: ClusterIP
