ingress/welcome-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: welcome-app
spec:
  rules:
  - host: INGRESS_IP.nip.io
    http:
      paths:
      - backend:
          serviceName: welcome-app
          servicePort: 80
        path: /
